--- a/download_apk/src/main/AndroidManifest.xml
+++ b/download_apk/src/main/AndroidManifest.xml
@@ -1,2 +1,35 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.joyshebao.download_apk" />
+    package="com.joyshebao.download_apk" >
+
+
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+
+    <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
+
+    <application
+        android:networkSecurityConfig="@xml/network_security_config"
+        >
+        
+        
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="com.joyshebao.download_apk.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+
+             <meta-data
+                 android:name="android.support.FILE_PROVIDER_PATHS"
+                 android:resource="@xml/file_paths"
+                 />
+
+        </provider>
+        
+    </application>
+    
+</manifest>
